package cz.tondracek.inqooltennis.common.gametype.model;

public enum GameType {
    SINGLES,
    DOUBLES
}
